kubernetes/apps/loki/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  labels:
    app: loki
spec:
  selector:
    app: loki
  ports:
  - port: 80
    protocol: TCP
    name: http-metrics
    targetPort: http-metrics
